loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:12: error: 'while' expected but 'if' found.
  if(nbBiscuits<=2) {
  ^Poucet2:18: error: '(' expected but ';' found.
  nbBiscuits=0
^