loopdowhile.Poucet2.scala.code
var nbBiscuits=0

while(!sortieTrouvee) {
  do(avance()) {
    while(!crossing()) {
      avance()
      if(estSurBiscuit()) {
        nbBiscuits=nbBiscuits+1
      }
    }
  }
  if(nbBiscuits<=2) {
    droite()
  }
  else if(nbBiscuits>=3) {
    gauche()
  }
  nbBiscuits=0
}

avance()